# RAGpy-Core

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  SECURITY.md  readme.md  requirements.txt
examples/: File Comparison.py  Long-Context Compression.py  Multi-File Ingestion and Querying.py  Quickstart.py
examples/ExampleFiles/: Sample_DOCX.docx  Sample_TXT.txt
ragpy/: AzureOpenAIRelay.py  ChunkCompressor.py  DatabaseRetriever.py  RAGOrchestrator.py  Reranker.py  VectorDatabase.py  __init__.py
ragpy/batching/: ChunkBatcher.py  __init__.py
ragpy/loaders/: FileLoader.py  ImageLoader.py  TextChunker.py  __init__.py
ragpy/mocks/: MockAzureFunctions.py  __init__.py
ragpy/utils/: CitationHelper.py  __init__.py
tests/: DatabaseConfigTest.py  MockAzureFunctions.py  __init__.py  test_compression.py  test_embeddings.py  test_image_loading.py  test_orchestrator.py  test_reranker.py  test_retrieval.py  test_vector_database.py
