[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragpy-core"
version = "1.0.11"
description = "A modular Retrieval-Augmented Generation (RAG) pipeline for Python."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
    { name = "William Klusman", email = "klusmannwilliam@gmail.com" }
]

keywords = [
    "RAG",
    "retrieval-augmented-generation",
    "LLM",
    "vector-database",
    "azure-openai",
    "machine-learning",
    "nlp"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "chromadb>=0.4.0",
    "numpy>=1.20",
    "tiktoken>=0.5.0",
    "requests>=2.0",
    "openai>=1.0.0",
    "pypdf>=4.0.0"
]

[project.urls]

[tool.setuptools.packages.find]
include = ["ragpy*"]